--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,8 @@
-/**
-* Template Name: Gp - v4.7.0
-* Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+font-family: 'Lato', sans-serif;
   color: #444444;
 }
 
@@ -29,7 +22,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+font-family: 'Lato', sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -143,10 +136,11 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0 8px 32px 0 #2424245e;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  background: rgba(255, 255, 255, 1);
 }
 #header.header-scrolled,
 #header.header-inner-pages {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(255, 255, 255, 1);
 }
 #header .logo {
   font-size: 32px;
@@ -171,7 +165,7 @@ body::-webkit-scrollbar-thumb {
 #  Get Startet Button
 --------------------------------------------------------------*/
 .get-started-btn {
-  color: #fff;
+  color: #000;
   border-radius: 4px;
   padding: 7px 25px 8px 25px;
   white-space: nowrap;
@@ -218,7 +212,7 @@ body::-webkit-scrollbar-thumb {
   padding: 10px 0 10px 30px;
   font-size: 15px;
   font-weight: 600;
-  color: #fff;
+  color: #000;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -295,7 +289,7 @@ body::-webkit-scrollbar-thumb {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
+  color: #000000;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -412,16 +406,25 @@ body::-webkit-scrollbar-thumb {
 }
 #hero h1 {
   margin: 0;
-  font-size: 56px;
+  font-size: 100px;
   font-weight: 700;
   line-height: 64px;
   color: #fff;
-  font-family: "Poppins", sans-serif;
-}
-#hero h1 span {
-  color: #ffc451;
+font-family: 'Lato', sans-serif;
 }
 #hero h2 {
+  margin: 10px;
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 64px;
+  text-shadow: 4px 4px #000;
+  color: #fff;
+font-family: 'Lato', sans-serif;
+}
+#hero h2 span {
+  color: #ffc451;
+}
+#hero h3 {
   color: rgba(255, 255, 255, 0.9);
   margin: 10px 0 0 0;
   font-size: 24px;
@@ -455,6 +458,64 @@ body::-webkit-scrollbar-thumb {
 }
 #hero .icon-box:hover {
   border-color: #ffc451;
+}
+#hero .custom-btn {
+  width: 230px;
+  height: 50px;
+  color: #000;
+  font-weight: 600;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  outline: none;
+}
+.btn-11 {
+  border: none;
+  background: rgb(255, 233, 64);
+    background: linear-gradient(0deg, rgba(255, 233, 64,1) 0%, rgb(246, 229, 102) 100%);
+    color: #000;
+    overflow: hidden;
+}
+.btn-11 a {
+  color: #000;
+  font-weight: 500;
+}
+.btn-11:hover {
+    text-decoration: none;
+    color: #fff;
+}
+.btn-11:before {
+    position: absolute;
+    content: '';
+    display: inline-block;
+    top: -180px;
+    left: 0;
+    width: 30px;
+    height: 100%;
+    background-color: #fff;
+    animation: shiny-btn1 3s ease-in-out infinite;
+}
+.btn-11:hover{
+  opacity: .7;
+}
+.btn-11:active{
+  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
+}
+@-webkit-keyframes shiny-btn1 {
+    0% { -webkit-transform: scale(0) rotate(45deg); opacity: 0; }
+    80% { -webkit-transform: scale(0) rotate(45deg); opacity: 0.5; }
+    81% { -webkit-transform: scale(4) rotate(45deg); opacity: 1; }
+    100% { -webkit-transform: scale(50) rotate(45deg); opacity: 0; }
 }
 @media (min-width: 1024px) {
   #hero {
@@ -495,7 +556,7 @@ section {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+font-family: 'Lato', sans-serif;
 }
 .section-title h2::after {
   content: "";
@@ -511,7 +572,7 @@ section {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #151515;
 }
 
@@ -521,7 +582,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 28px;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 .about .content ul {
   list-style: none;
@@ -671,7 +732,7 @@ section {
   color: #fff;
 }
 .cta .cta-btn {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 1px;
@@ -692,6 +753,9 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.portfolio {
+  margin-top: 100px;
+}
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
@@ -908,7 +972,7 @@ section {
 .counts .content .count-box p {
   padding: 15px 0 0 0;
   margin: 0 0 0 50px;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   color: #3b3b3b;
 }
@@ -918,7 +982,7 @@ section {
   margin-top: 20px;
   color: #3b3b3b;
   font-size: 15px;
-  font-family: "Poppins", sans-serif;
+font-family: 'Lato', sans-serif;
   transition: ease-in-out 0.3s;
 }
 .counts .content .count-box a:hover {
@@ -1313,7 +1377,7 @@ section {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #fff;
 }
 #footer .footer-top .social-links a {
