Theme color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@ font-family: 'Lato', sans-serif;
 }
 
 a {
-  color: #ffc451;
+  color:  #ffd325;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ffd584;
+  color: #ffd325;
   text-decoration: none;
 }
 
@@ -35,7 +35,7 @@ font-family: 'Lato', sans-serif;
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ffc451;
+  background: #ffd325;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -50,7 +50,7 @@ font-family: 'Lato', sans-serif;
   background: #151515;
 }
 .back-to-top:hover i {
-  color: #ffc451;
+  color: #ffd325;
 }
 .back-to-top.active {
   visibility: visible;
@@ -76,7 +76,7 @@ font-family: 'Lato', sans-serif;
   position: fixed;
   top: calc(50% - 0px);
   left: calc(50% - 30px);
-  border: 6px solid #ffc451;
+  border: 6px solid #ffd325;
   border-top-color: #151515;
   border-bottom-color: #151515;
   border-radius: 50%;
@@ -124,7 +124,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #ffc451;
+  background-color: #ffd325;
 }
 /*--------------------------------------------------------------
 # Header
@@ -155,7 +155,7 @@ body::-webkit-scrollbar-thumb {
   color: #fff;
 }
 #header .logo a span {
-  color: #ffc451;
+  color: #ffd325;
 }
 #header .logo img {
   max-height: 40px;
@@ -172,7 +172,7 @@ body::-webkit-scrollbar-thumb {
   transition: 0.3s;
   font-size: 14px;
   display: inline-block;
-  border: 2px solid #ffc451;
+  border: 2px solid #ffd325;
 }
 .get-started-btn:hover {
   background: #ffbb38;
@@ -226,7 +226,7 @@ body::-webkit-scrollbar-thumb {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover > a {
-  color: #ffc451;
+  color: #ffd325;
 }
 .navbar .dropdown ul {
   display: block;
@@ -258,7 +258,7 @@ body::-webkit-scrollbar-thumb {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-  background-color: #ffc451;
+  background-color: #ffd325;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -344,7 +344,7 @@ body::-webkit-scrollbar-thumb {
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
   color: #151515;
-  background-color: #ffc451;
+  background-color: #ffd325;
 }
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
@@ -374,7 +374,7 @@ body::-webkit-scrollbar-thumb {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover > a {
-  background-color: #ffc451;
+  background-color:  #ffd325;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -417,12 +417,12 @@ font-family: 'Lato', sans-serif;
   font-size: 60px;
   font-weight: 700;
   line-height: 64px;
-  text-shadow: 4px 4px #000;
+  /* text-shadow: 4px 4px #000; */
   color: #fff;
 font-family: 'Lato', sans-serif;
 }
 #hero h2 span {
-  color: #ffc451;
+  color:  #ffd325;
 }
 #hero h3 {
   color: rgba(255, 255, 255, 0.9);
@@ -439,7 +439,7 @@ font-family: 'Lato', sans-serif;
 #hero .icon-box i {
   font-size: 32px;
   line-height: 1;
-  color: #ffc451;
+  color:  #ffd325;
 }
 #hero .icon-box h3 {
   font-weight: 700;
@@ -454,10 +454,10 @@ font-family: 'Lato', sans-serif;
   transition: ease-in-out 0.3s;
 }
 #hero .icon-box h3 a:hover {
-  color: #ffc451;
+  color:  #ffd325;
 }
 #hero .icon-box:hover {
-  border-color: #ffc451;
+  border-color:  #ffd325;
 }
 #hero .custom-btn {
   width: 230px;
@@ -597,7 +597,7 @@ font-family: 'Lato', sans-serif;
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #ffc451;
+  color:  #ffd325;
 }
 .about .content p:last-child {
   margin-bottom: 0;
@@ -630,7 +630,7 @@ font-family: 'Lato', sans-serif;
   background-color: #ddd;
 }
 .clients .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color:  #ffd325;
 }
 
 /*--------------------------------------------------------------
@@ -650,7 +650,7 @@ font-family: 'Lato', sans-serif;
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #ffc451;
+  color:  #ffd325;
 }
 .features .icon-box p {
   font-size: 15px;
@@ -678,7 +678,7 @@ font-family: 'Lato', sans-serif;
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #ffc451;
+  background:  #ffd325;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -701,7 +701,7 @@ font-family: 'Lato', sans-serif;
   transition: ease-in-out 0.3s;
 }
 .services .icon-box h4 a:hover {
-  color: #ffc451;
+  color:  #ffd325;
 }
 .services .icon-box p {
   line-height: 24px;
@@ -745,8 +745,8 @@ font-family: 'Lato', sans-serif;
   color: #fff;
 }
 .cta .cta-btn:hover {
-  background: #ffc451;
-  border-color: #ffc451;
+  background:  #ffd325;
+  border-color:  #ffd325;
   color: #151515;
 }
 
@@ -781,7 +781,7 @@ font-family: 'Lato', sans-serif;
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #151515;
-  background: #ffc451;
+  background:  #ffd325;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -848,7 +848,7 @@ font-family: 'Lato', sans-serif;
   transition: 0.3s;
 }
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #ffc451;
+  color:  #ffd325;
 }
 .portfolio .portfolio-wrap:hover::before {
   opacity: 1;
@@ -870,7 +870,7 @@ font-family: 'Lato', sans-serif;
 }
 
 .ebook-form .ebook-submit-btn {
-  background-color: #ffc451;
+  background-color:  #ffd325;
   padding: 10px 20px;
   border: 0;
   outline: none;
@@ -898,13 +898,13 @@ font-family: 'Lato', sans-serif;
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ffc451;
+  border: 1px solid  #ffd325;
 }
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color:  #ffd325;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -958,7 +958,7 @@ font-family: 'Lato', sans-serif;
 .counts .content .count-box i {
   display: block;
   font-size: 36px;
-  color: #ffc451;
+  color:  #ffd325;
   float: left;
 }
 .counts .content .count-box span {
@@ -1086,7 +1086,7 @@ font-family: 'Lato', sans-serif;
   opacity: 0.5;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ffc451;
+  background-color:  #ffd325;
   opacity: 1;
 }
 @media (min-width: 1024px) {
@@ -1143,7 +1143,7 @@ font-family: 'Lato', sans-serif;
 }
 .team .member .social a:hover {
   color: #151515;
-  background: #ffc451;
+  background:  #ffd325;
 }
 .team .member .social i {
   font-size: 18px;
@@ -1184,7 +1184,7 @@ font-family: 'Lato', sans-serif;
 }
 .contact .info i {
   font-size: 20px;
-  background: #ffc451;
+  background:  #ffd325;
   color: #151515;
   float: left;
   width: 44px;
@@ -1265,7 +1265,7 @@ font-family: 'Lato', sans-serif;
 }
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #ffc451;
+  border-color:  #ffd325;
 }
 .contact .php-email-form input {
   height: 44px;
@@ -1274,7 +1274,7 @@ font-family: 'Lato', sans-serif;
   padding: 10px 12px;
 }
 .contact .php-email-form button[type="submit"] {
-  background: #ffc451;
+  background:  #ffd325;
   border: 0;
   padding: 10px 24px;
   color: #151515;
@@ -1371,7 +1371,7 @@ font-family: 'Lato', sans-serif;
   text-transform: uppercase;
 }
 #footer .footer-top .footer-info h3 span {
-  color: #ffc451;
+  color:  #ffd325;
 }
 #footer .footer-top .footer-info p {
   font-size: 14px;
@@ -1395,7 +1395,7 @@ font-family: 'Lato', sans-serif;
   transition: 0.3s;
 }
 #footer .footer-top .social-links a:hover {
-  background: #ffc451;
+  background:  #ffd325;
   color: #151515;
   text-decoration: none;
 }
@@ -1416,7 +1416,7 @@ font-family: 'Lato', sans-serif;
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ffc451;
+  color:  #ffd325;
   font-size: 18px;
   line-height: 1;
 }
@@ -1435,7 +1435,7 @@ font-family: 'Lato', sans-serif;
   line-height: 1;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #ffc451;
+  color:  #ffd325;
 }
 #footer .footer-top .footer-newsletter form {
   margin-top: 30px;
@@ -1458,7 +1458,7 @@ font-family: 'Lato', sans-serif;
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ffc451;
+  background:  #ffd325;
   color: #151515;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
