--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ section {
   line-height: 1px;
   margin: 0 0 5px 0;
   letter-spacing: 2px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: #aaaaaa;
 font-family: 'Lato', sans-serif;
 }
