--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ body::-webkit-scrollbar-thumb {
   line-height: 1;
   font-weight: 700;
   letter-spacing: 2px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 #header .logo a {
   color: #fff;
@@ -316,11 +316,13 @@ body::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
   z-index: 999;
+  height: 100vh;
 }
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
   top: 15px;
   right: 15px;
+  color: #fff;
 }
 .navbar-mobile ul {
   display: block;
@@ -571,7 +573,7 @@ font-family: 'Lato', sans-serif;
   margin: 0;
   font-size: 36px;
   font-weight: 700;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: 'Lato', sans-serif;
   color: #151515;
 }
@@ -772,7 +774,7 @@ font-family: 'Lato', sans-serif;
   font-size: 14px;
   font-weight: 600;
   line-height: 1;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: #444444;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
@@ -1368,7 +1370,7 @@ font-family: 'Lato', sans-serif;
   padding: 2px 0 2px 0;
   line-height: 1;
   font-weight: 700;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 #footer .footer-top .footer-info h3 span {
   color:  #ffd325;
