--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ body::-webkit-scrollbar-thumb {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 15px 0;
+  padding: 10px 0;
   box-shadow: 0 8px 32px 0 #2424245e;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
@@ -158,7 +158,12 @@ body::-webkit-scrollbar-thumb {
   color: #ffd325;
 }
 #header .logo img {
-  max-height: 40px;
+  max-height: 65px;
+}
+@media screen and (max-width: 768px) {
+  #header .logo img {
+    max-height: 40px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -210,7 +215,7 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 600;
   color: #000;
   white-space: nowrap;
@@ -311,18 +316,20 @@ body::-webkit-scrollbar-thumb {
   overflow: hidden;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  /* background: rgba(0, 0, 0, 0.9); */
+  background: #fff;
   transition: 0.3s;
   z-index: 999;
-  height: 100vh;
+  height: 36vh;
+  width: 55%;
+  box-shadow: -5px 10px 10px #00000045;
 }
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
   top: 15px;
   right: 15px;
-  color: #fff;
+  color: #000;
 }
 .navbar-mobile ul {
   display: block;
@@ -524,7 +531,7 @@ font-family: 'Lato', sans-serif;
     background-attachment: fixed;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   #hero {
     height: auto;
   }
@@ -535,6 +542,43 @@ font-family: 'Lato', sans-serif;
   #hero h2 {
     font-size: 20px;
     line-height: 24px;
+  }
+  #herp h3 {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #hero {
+    height: auto;
+  }
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  #hero h2 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  #hero h3 {
+    font-size: 16px;
+    letter-spacing: 2px;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  #hero {
+    height: auto;
+  }
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  #hero h2 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  #hero h3 {
+    font-size: 18px;
   }
 }
 
@@ -605,6 +649,37 @@ font-family: 'Lato', sans-serif;
   margin-bottom: 0;
 }
 
+.about .about-container {
+  text-align: right;
+}
+
+.explore-btn {
+  width: fit-content;
+  background-color: #ffd325;
+  border: 2px solid #000000;
+  padding: 12px 50px;
+
+}
+.explore-btn > a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+@media (max-width: 992px) {
+  .about .about-container {
+    text-align: center;
+  }
+  .about .about-container::before {
+    content: '';
+    width: fit-content;
+    height: fit-content;
+    transform: translate(-5px, -5px);
+    color: #000;
+  }
+}
+
 /*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
@@ -638,8 +713,14 @@ font-family: 'Lato', sans-serif;
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
+.personal-video-container {
+  background-color: #ffe940;
+  background-color: #ffe9403d;
+  background-color: #83614f6e;
+  ;
+}
 .features {
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
 .features .icon-box {
   padding-left: 15px;
@@ -664,6 +745,36 @@ font-family: 'Lato', sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 400px;
+}
+
+.featured-video-content > h1 {
+  font-size: 25px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  text-shadow: 2px 2px #ffd325;
+}
+.featured-video-content > ul {
+  list-style: none;
+}
+.featured-video-content > ul li {
+  color: #000;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 35px;
+  position: relative;
+  padding: 0 0 0 20px;
+}
+
+.featured-video-content > ul li::before {
+			content: "";
+			position: absolute;
+			left: 0;
+			top: 10px;
+			height: 10px;
+			width: 10px;
+			border: 1.5px solid #c1a124;
+			border-width: 3px 3px 0 0;
+			transform: rotate(45deg);
 }
 
 /*--------------------------------------------------------------
@@ -721,7 +832,7 @@ font-family: 'Lato', sans-serif;
 --------------------------------------------------------------*/
 .cta {
   background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../img/cta-bg.jpg") fixed center center;
+    url("../img/road-5534760.jpg") fixed center center;
   background-size: cover;
   padding: 60px 0;
 }
@@ -1276,7 +1387,7 @@ font-family: 'Lato', sans-serif;
   padding: 10px 12px;
 }
 .contact .php-email-form button[type="submit"] {
-  background:  #ffd325;
+  background:  #ffe940;
   border: 0;
   padding: 10px 24px;
   color: #151515;
@@ -1284,7 +1395,7 @@ font-family: 'Lato', sans-serif;
   border-radius: 4px;
 }
 .contact .php-email-form button[type="submit"]:hover {
-  background: #ffcd6b;
+  background: #ffe940;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1300,6 +1411,18 @@ font-family: 'Lato', sans-serif;
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@media only screen and (max-width: 600px) {
+  .contact .contact-svg-icon {
+    width: 70%;
+    margin: 0 auto;
+  }
+}
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+  .contact .contact-svg-icon {
+    width: 50%;
+    margin: 0 auto;
   }
 }
 
